# apps/api/src/modules/storage/entities/multipart.entity.ts
@@ -1,0 +1,14 @@
+import { ApiProperty } from '@nestjs/swagger'
+
+export class MultipartUploadEntity {
+  @ApiProperty()
+  uploadId: string
+
+  @ApiProperty()
+  key: string
+}
+
+export class PresignedPartEntity {
+  @ApiProperty()
+  url: string
+}
